# netsentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  print.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cve.rs  database.rs  diff.rs  lib.rs  main.rs  scanner.rs  shodan.rs  threat_intel.rs
src/components/: CveCard.tsx  ScanResultsTable.tsx  SeverityBadge.tsx  Sidebar.tsx  ThreatIntelPanel.tsx  Toast.tsx
src/pages/: CveSearch.tsx  Dashboard.tsx  Diff.tsx  History.tsx  Learn.tsx  Report.tsx  Scanner.tsx  Settings.tsx
src/store/: historyStore.ts  scanStore.ts
